<resources>
    <string name="app_name">version0.1</string>
    <string name="signin">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="text_account">کاربر جدید هستی؟</string>
    <string name="login_user">ورود کاربر</string>
    <string name="password">رمز عبور</string>
    <string name="username">نام کاربری</string>
    <string name="setting">تنظیمات</string>
    <string name="panel">پنل کاربری</string>
    <string name="mygadget">گجت من</string>
    <string name="mysituation">وضعیت من</string>
    <string name="analysis">آنالیز</string>
    <string name="feedback">باز خورد</string>
    <string name="goal">هدف گذاری</string>
    <string name="newusername">نام کاربری جدید</string>
    <string name="newpass">رمز عبور جدید</string>
    <string name="createaccount">ساخت حساب کاربری</string>
    <string name="fullname">نام و نام خانوادگی:</string>
    <string name="sex">جنسیت:</string>
    <string name="location">محل سکونت:</string>
    <string name="age">سن:</string>
    <string name="job">شغل:</string>
    <string name="height">قد:</string>
    <string name="weight">وزن:</string>
    <string name="hobby">عادت فردی:</string>
    <string name="disease_records">سوابق بیماری:</string>
    <string name="accept">ثبت</string>
    <string name="reinter_newpass">رمزعبور جدید را دوباره وارد کنید</string>
    <string name="phone_num">شماره همراه</string>
    <string name="Email">ایمیل</string>
    <string name="record">ضبط</string>
    <string name="rules">- من با جمع آوری، استفاده و ذخیره ایمن داده های شخصی خود از جمله الگوهای خواب، اطلاعات سلامت و آمار استفاده موافقم. می‌دانم که از این داده‌ها برای ارائه توصیه‌های شخصی سازی شده و بهبود عملکرد برنامه استفاده می‌شود.
\n
\n

- مسئولیت حفظ محرمانه بودن اطلاعات حساب کاربری خود از جمله نام کاربری و رمز عبور خود را بر عهده خواهم گرفت. من اهمیت ایجاد یک رمز عبور قوی، به روز رسانی منظم آن، و خصوصی نگه داشتن اطلاعات ورود به سیستم را درک می کنم.
\n
\n

- من موافقت می کنم که از این برنامه صرفاً برای هدف مورد نظر آن یعنی بهبود سلامت خواب استفاده کنم. من متعهد به ارائه اطلاعات دقیق و صادقانه در هنگام ثبت نام و تنظیم نمایه هستم.
        \n
\n

- با دریافت به‌روزرسانی‌های دوره‌ای برای بهبود عملکرد، رفع آسیب‌پذیری‌های امنیتی یا معرفی ویژگی‌های جدید موافقت می‌کنم. من اهمیت به روز نگه داشتن برنامه را برای اطمینان از عملکرد مطلوب تشخیص می دهم.
\n
\n

- تصدیق می کنم که این برنامه بینش ها و توصیه هایی را ارائه می دهد اما جایگزین توصیه های پزشکی حرفه ای نیست. من موافقت می کنم که برای راهنمایی و درمان شخصی با متخصصان مراقبت های بهداشتی مشورت کنم.
\n
\n

- اطلاعات تماس ارائه شده، از جمله آدرس ایمیل یا صفحه پشتیبانی را به عنوان کانال های تعیین شده برای درخواست کمک یا گزارش مشکلات فنی تأیید می کنم. من منتظر پاسخ های سریع و حرفه ای به هر سؤال یا نگرانی هستم.
</string>
    <string name="about_tinab">تجزیه و تحلیل خواب مبتنی بر هوش مصنوعی:
\n
به تیناب شریک مورد اعتماد شما در بهبود کیفیت خواب خوش آمدید. پلتفرم تجزیه و تحلیل مبتنی بر هوش مصنوعی ما از الگوریتم های پیشرفته برای ارائه برنامه های بهبود خواب شخصی استفاده می کند. سیستم ما با ردیابی الگوهای خواب، عادات خواب، و فعالیت‌های روزانه، به شما کمک می کند خواب بهتری داشته باشید.
        \n
\n

ردیابی عادت و هشدارهای هوشمند:
        \n

ویژگی‌های ردیابی عادت ما به شناسایی الگوهایی در برنامه‌های روزمره شما کمک می‌کند که بر خواب شما تأثیر می‌گذارند. ما توصیه های عملی برای ساختن عادات مناسب که به کیفیت خواب شما کمک کند و آن را بهبود ببخشد ارائه می دهیم. آلارم‌های هوشمند ما به آرامی شما را در زمان‌های بهینه از خواب بیدار می‌کنند و با ریتم طبیعی بدنتان هماهنگ می‌شوند.
\n
\n

تشخیص و مدیریت آپنه خواب:
        \n

ما راه حل های تخصصی برای کمک به تشخیص و پیگیری درمان بیماران مبتلا به آپنه خواب ارائه می دهیم. پلتفرم ما با دستگاه تشخیص آپنه خواب که از فناوری پیشرفته تجزیه و تحلیل صدا استفاده می کند، ادغام می شود. این دستگاه رویدادهای تنفسی را در هنگام خواب ثبت و تجزیه و تحلیل می کند و اطلاعات ارزشمندی را دراختیار شما و پزشکتان قرار می دهد.
\n
\n

برنامه های شخصی بهبود خواب:
        \n

تجزیه و تحلیل مبتنی بر هوش مصنوعی ما توصیه‌هایی را برای بهبود الگو خواب شما و اختلالات خواب شما انجام می دهد. چه به دنبال بهبود طول مدت خواب، کیفیت خواب بهتر یا افزایش انرژی در طول روز باشید، برنامه های ما شما را به سمت خواب بهتر هدایت می کند.
\n
\n

گجتهای های پیشرفته، ردیابی جامع:
        \n

گجت‌های ما داده‌های مهم از وضعیت سلامت شما در هنگام خواب ، از جمله ضربان تنفس، ضربان قلب، وضعیت بدن و سطح اکسیژن خون را ضبط می‌کنند. به کمک این اطلاعات مدل هوش مصنوعی پبشنهادات لازم را برای بهبود کیفیت خواب شما ارائه می دهد و در ضمن در صورت بروز اختلال شما را به متخصص ارجاع می دهد.
\n
\n

امنیت و حریم خصوصی داده ها:
        \n

ما امنیت و حریم خصوصی داده ها را در اولویت قرار می دهیم. ابزارها و برنامه ما از پروتکل های سختگیرانه حفاظت از داده ها و استانداردهای رمزگذاری پیروی می کنند. مطمئن باشید که داده‌های خواب، تغییرات ضربان قلب، تعداد تنفس و سایر اطلاعات حساس با نهایت احتیاط و محرمانه مورد استفاده قرار می‌گیرند.
\n
\n

نوآوری مستمر:
        \n

تیم تحقیق و توسعه تیناب به طور مداوم فناوری های نوظهور را بررسی می کند، با کارشناسان صنعت همکاری می کند و به بازخورد کاربران گوش می دهد. ما در تلاش هستیم تا پیشرفته ترین ابزارها را برای شما به ارمغان بیاوریم تا اطمینان حاصل کنیم که جدیدترین و مؤثرترین راه حل های بهبود خواب را دریافت می کنید.
\n
\n

با ابزارهای پیشرفته و ردیابی جامع خود، به شما این امکان را می‌دهیم که سلامت خواب خود را بهبود ببخشید. برنامه ما را دانلود کنید و خوابی با کیفیت را تجربه کنید، که منجر به سلامت کلی و شاداب تر شدن شما می شود. بگذارید ابزارهای ما همراهان مورد اعتماد شما در سفر شما به سمت زندگی سالم تر و خواب با کیفیت تر باشند
</string>
</resources>