<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="543dp"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sleep_illustrations_01_removebg_preview" />

    <Button
        android:id="@+id/setting"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/setting"
        app:icon="@drawable/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/panel"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:text="@string/panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goals"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/goal"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/feedback"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/gadget"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mygadget"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/situation"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/analysis"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:text="@string/analysis"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/feedback"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/analysis"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/situation"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/mysituation"
        android:textAlignment="center"
        android:textSize="7sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/analysis"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>