<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNewUsername"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:hint="@string/newusername"
        android:inputType="text"
        android:textAlignment="viewEnd"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etNewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:hint="@string/newpass"
        android:inputType="textPassword"
        android:textAlignment="viewEnd"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etNewPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPhone" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/createaccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword2" />

    <Button
        android:id="@+id/back"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:text="Button"
        app:icon="@drawable/_114883"
        app:layout_constraintBottom_toTopOf="@+id/etNewUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNewPassword2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/reinter_newpass"
        android:inputType="textPassword"
        android:textAlignment="viewEnd"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

    <EditText
        android:id="@+id/etNewEmail"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/etNewPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewUsername" />

    <EditText
        android:id="@+id/etNewPhone"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/phone_num"
        android:inputType="phone"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/etNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>
